﻿zg 21.05.2016 11:27:47 +0200 - build 4686

1. с форума: резкое замедление работы UNDO/REDO в редакторе.

2. замедление встроенной замены после 4673.

zg 21.05.2016 04:45:34 +0200 - build 4685

1. с форума: Измеряем время исполнения CtrlAltEnd, находясь в начале файла %FARHOME%\changelog.

2. медленная работа ECTL_INSERTTEXT после 4673.

3. gcc warning.

drkns 20.05.2016 21:57:30 +0200 - build 4684

1. 0003099: В функции Menu не всегда работает флаг FMENU_CHANGECONSOLETITLE

drkns 20.05.2016 21:16:12 +0200 - build 4683

1. #0003243 Пункты user-menu, в которых вызывается .cmd начали запускаються в отдельном окне.

drkns 19.05.2016 19:03:12 +0200 - build 4682

1. Уточнение 4679.

zg 19.05.2016 18:08:09 +0200 - build 4681

1. артефакты при altf9 из комбобокса.

drkns 19.05.2016 01:35:59 +0200 - build 4680

1. Уточнение 4679.

drkns 19.05.2016 00:40:27 +0200 - build 4679

1. Продолжение экспериментов с запускателем:
   - тип запуска (консольный с ожиданием / тихий без ожидания) теперь определяется и для системных ассоциаций тоже.
   - System.Executor.BatchType больше нет, всё должно корректно работать автоматически.

zg 18.05.2016 19:37:11 +0200 - build 4678

1. при определённых условиях позиция курсора в текущей строке после ECTL_DELETESTRING была неверной.

drkns 17.05.2016 20:41:13 +0200 - build 4677

1. Рефакторинг - добавим немного const.

zg 17.05.2016 13:03:38 +0200 - build 4676

1. уточнение 4673 для ECTL_SETPOSITION.

drkns 16.05.2016 22:55:36 +0200 - build 4675

1. Ещё одно уточнение работы запускателя.

drkns 15.05.2016 22:00:35 +0200 - build 4674

1. Уточнение 4668.

zg 15.05.2016 17:37:36 +0200 - build 4673

1. убрана блокировка перерисовки окон.

zg 15.05.2016 00:33:49 +0200 - build 4672

1. с форума: символ из "бюжэхъё" не включается в быстрый поиск.

drkns 13.05.2016 00:33:18 +0200 - build 4671

1. Уточнение обработки исключений для gcc.

2. Дополнительная информация в исключениях, брошенных вручную (function, file, line).

3. Рефакторинг.
