@@ -410,7 +410,7 @@ Dialog::~Dialog()
 	if (Global)
 	{
 		if (Global->Opt->Clock && Global->WindowManager->IsPanelsActive(true))
-			ShowTime(0);
+			ShowTime();
 
 		if (!CheckDialogMode(DMODE_ISMENU))
 			Global->ScrBuf->Flush();
