@@ -1,4 +1,8 @@
-﻿zg 21.05.2016 11:27:47 +0200 - build 4686
+﻿drkns 21.05.2016 20:30:22 +0200 - build 4687
+
+1. По мотивам #0003244 - отображаем часы в соответствии с региональными настройками ОС.
+
+zg 21.05.2016 11:27:47 +0200 - build 4686
 
 1. с форума: резкое замедление работы UNDO/REDO в редакторе.
 
